# personal_warehouse

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
src/: main.py  settings.py
src/api_v1/: __init__.py  places.py  products.py  products_locations.py  products_types.py  statuses.py  users.py
src/api_v1/auth/: router.py  views.py
src/db/: connections.py
src/dependencies/: depends_products_service.py  depends_users_service.py
src/models/: __init__.py  base.py  image_paths.py  places.py  products.py  products_location.py  products_types.py  statuses.py  users.py
src/repositories/: abstract_repository.py  base_repository.py  place_repository.py  products_repository.py  users_repository.py
src/schemas/: places.py  products.py  products_types.py  statuses.py  users.py
src/services/: place_service.py  products_service.py  users_service.py
