[tool.poetry]
name = "personal-warehouse"
version = "0.1.0"
description = ""
authors = ["maxim <soldiertoy01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
